[package]
name = "jekyll-to-gatsby"
authors = ["Liana Pigeot"]
license = "MIT"
description = "A tool to batch update Jekyll markdown posts to work with Gatsby, adding their date in the frontmatter block"
readme = "README.md"
homepage = "https://github.com/nialna/jekyll-to-gatsby"
repository = "https://github.com/nialna/jekyll-to-gatsby"
keywords = ["cli", "jekyll", "gatsby", "markdown", "frontmatter"]
version = "0.4.0"
edition = "2018"
categories = ["command-line-utilities"]
exclude = ["/output"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.2"
regex = "1"
lazy_static = "1.4.0"